paid/force-app/main/default/objects/PAID_Order_Field_Mapping__mdt/PAID_Order_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>PAID Order Field Mapping</label>
    <pluralLabel>PAID Order Field Mapping</pluralLabel>
</CustomObject>