paid/force-app/main/default/objects/PAID_Order_Field_Mapping__mdt/fields/PAID_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>PAID_Field_Name__c</fullName>
    <label>PAID Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>