paid/force-app/main/default/objects/PAID_Order_Field_Mapping__mdt/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <label>Salesforce Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>