paid/force-app/main/default/objects/PAID_Order_Field_Mapping__mdt/fields/Transformation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Rule__c</fullName>
    <label>Transformation Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Uppercase</fullName>
            </value>
            <value>
                <fullName>Lowercase</fullName>
            </value>
            <value>
                <fullName>Trim</fullName>
            </value>
            <value>
                <fullName>Format Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>